DMC-E系列控制卡例程/VB6.0/例3_回原点运动/LTDMC.bas

        
        '3800,3600,5800,5600专用 外部减速停止信号及减速停止时间配置
        'Declare Function dmc_set_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer, ByVal time As Long) As Integer
        'Declare Function dmc_get_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer, ByRef time As Long) As Integer
        'Declare Function dmc_set_dstp_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal time As Long) As Integer
        'Declare Function dmc_get_dstp_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef time As Long) As Integer
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_set_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer) As Integer
        Declare Function dmc_get_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer) As Integer
        Declare Function dmc_set_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal stop_time As Double) As Integer
        Declare Function dmc_get_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef stop_time As Double) As Integer
        Declare Function dmc_set_vector_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal stop_time As Double) As Integer
        Declare Function dmc_get_vector_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef stop_time As Double) As Integer
        Declare Function dmc_set_dec_stop_dist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long) As Integer
        Declare Function dmc_get_dec_stop_dist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Dist As Long) As Integer
        Declare Function dmc_set_io_dstp_bitno Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal bitno As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_get_io_dstp_bitno Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef bitno As Integer, ByRef filter As Double) As Integer
       
        '编码器
        Declare Function dmc_set_counter_inmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal mode As Integer) As Integer      '设定编码器的计数方式
        Declare Function dmc_get_counter_inmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef mode As Integer) As Integer        '读取编码器的计数方式
        Declare Function dmc_get_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long
        Declare Function dmc_set_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal encoder_value As Long) As Integer
        Declare Function dmc_set_encoder_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Double) As Integer   '当前反馈位置
        Declare Function dmc_get_encoder_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Double) As Integer
        Declare Function dmc_set_handwheel_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal pos As Long) As Integer
        Declare Function dmc_get_handwheel_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef pos As Long) As Integer
        Declare Function dmc_set_extra_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal inmode As Integer, ByVal multi As Integer) As Integer
        Declare Function dmc_get_extra_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef inmode As Integer, ByRef multi As Integer) As Integer
        Declare Function dmc_set_extra_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal pos As Integer) As Integer
        Declare Function dmc_get_extra_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef pos As Integer) As Integer
        
        Declare Function dmc_get_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long      '读取指定轴的当前位置
        Declare Function dmc_set_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal current_position As Long) As Integer   '设定指定轴的当前位置
        Declare Function dmc_set_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Double) As Integer    '当前指令位置
        Declare Function dmc_get_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Double) As Integer
      
       
        Declare Function dmc_set_auxiliary_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal inmode As Integer, ByVal multi As Integer) As Integer
        Declare Function dmc_get_auxiliary_encoder_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef inmode As Integer, ByRef multi As Integer) As Integer
        Declare Function dmc_set_auxiliary_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByVal pos As Integer) As Integer
        Declare Function dmc_get_auxiliary_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef inmode As Integer) As Integer
  
        
        '3800,3600,5800,5600专用 IO辅助功能函数
        Declare Function dmc_IO_TurnOutDelay Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal DelayTime As Long) As Integer
        Declare Function dmc_SetIoCountMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal mode As Integer, ByVal filter As Long) As Integer
        Declare Function dmc_GetIoCountMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef mode As Integer, ByRef filter As Long) As Integer
        Declare Function dmc_SetIoCountValue Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal CountValue As Long) As Integer
        Declare Function dmc_GetIoCountValue Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef CountValue As Long) As Integer
    
        
       
        '运动状态
        Declare Function dmc_read_current_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Double      '读取指定轴的当前速度
        Declare Function dmc_read_current_speed_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef current_speed As Double) As Integer  '轴当前运行速度
             
        Declare Function dmc_get_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long      '读取目标位置
        Declare Function dmc_get_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Double) As Long      '读取目标位置
        Declare Function dmc_check_done Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer     '读取指定轴的运动状态
        Declare Function dmc_axis_io_status Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long    '读取指定轴有关运动信号的状态
        Declare Function dmc_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal stop_mode As Integer) As Integer       '单轴停止
        Declare Function dmc_check_done_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer
        Declare Function dmc_stop_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal stop_mode As Integer) As Integer
        Declare Function dmc_emg_stop Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer      '紧急停止所有轴
        '3800,3600,5800,5600专用 主卡与接线盒通讯状态
        Declare Function dmc_LinkState Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef state As Integer) As Integer      '连接状态
        Declare Function dmc_get_axis_run_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef run_mode As Integer) As Integer       '轴运动模式
        Declare Function dmc_get_stop_reason Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef StopReason As Long) As Integer   '读取轴停止原因
        Declare Function dmc_clear_stop_reason Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer   '清除轴停止原因
        
        '检测轴到位状态
        Declare Function dmc_set_factor_error Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal factor As Double, ByVal error As Long) As Integer
        Declare Function dmc_get_factor_error Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef factor As Double, ByRef error As Long) As Integer
        Declare Function dmc_check_success_pulse Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function dmc_check_success_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
       
        'DMC5000系列专用，基于脉冲当量的高级运动功能，连续插补运动功能
        Declare Function dmc_set_trace Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer) As Integer      'trace功能
        Declare Function dmc_get_trace Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer) As Integer
        Declare Function dmc_read_trace_data Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal data_option As Integer, ByRef ReceiveSize As Long, ByRef time As Double, ByRef data As Double, ByRef remain_num As Long) As Integer
        Declare Function dmc_trace_start Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer
        Declare Function dmc_trace_stop Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer

        Declare Function dmc_calculate_arclength_center Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef target_Pos As Double, ByRef cen_Pos As Double, ByVal arc_dir As Integer, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
        Declare Function dmc_calculate_arclength_3point Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef mid_pos As Double, ByRef target_Pos As Double, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
        Declare Function dmc_calculate_arclength_radius Lib "LTDMC.dll" (ByRef start_pos As Double, ByRef target_Pos As Double, ByVal arc_radius As Double, ByVal arc_dir As Integer, ByVal ArcCircle As Double, ByRef ArcLength As Double) As Integer
